--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "vuepress dev . --open --host \"localhost\"",
     "build": "vuepress build .",
-	"deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh"
   },
   "devDependencies": {
     "vuepress": "1.8.2",
+    "vuepress-plugin-medium-zoom": "^1.1.9",
     "vuepress-plugin-permalink-pinyin": "^1.0.0",
     "vuepress-theme-reco": "1.6.10"
   },
