--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "vuepress": "1.8.2",
     "vuepress-plugin-medium-zoom": "^1.1.9",
     "vuepress-plugin-permalink-pinyin": "^1.0.0",
-    "vuepress-theme-reco": "1.6.10",
-    "vuepress-plugin-boxx": "0.0.7"
+    "vuepress-theme-reco": "1.6.10"
   },
   "description": ""
 }
