--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "vuepress-plugin-permalink-pinyin": "^1.0.0",
     "vuepress-theme-reco": "1.6.10"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "moment": "^2.29.3"
+  }
 }
